Allow assigning multiple authorization levels to usergroup

--- a/Kitodo/src/main/webapp/pages/BenutzergruppenBearbeiten.xhtml
+++ b/Kitodo/src/main/webapp/pages/BenutzergruppenBearbeiten.xhtml
@@ -112,7 +112,7 @@
 
                                                             <t:selectOneMenu id="berechtigung"
                                                                              style="width: 300px;margin-right:15px"
-                                                                             value="#{BenutzergruppenForm.myBenutzergruppe.permissionAsString}"
+                                                                             value="#{BenutzergruppenForm.myBenutzergruppe.authorizations}"
                                                                              required="true">
                                                                 <f:selectItem id="id16" itemValue="1"
                                                                               itemLabel="#{msgs.administration}"/>
