--- a/Kitodo/src/main/webapp/pages/userEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/userEdit.xhtml
@@ -74,7 +74,7 @@
                         <p:outputLabel for="password" value="#{msgs.password}"/>
                         <p:password id="password"
                                     placeholder="#{msgs.password}"
-                                    value="#{BenutzerverwaltungForm.userObject.passwordDecrypted}"
+                                    value="#{BenutzerverwaltungForm.password}"
                                     required="true"
                                     redisplay="true"/>
                     </div>
