Use correct password and authentication properties in user and usergroup editing templates

--- a/Kitodo/src/main/webapp/pages/usergroupEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/usergroupEdit.xhtml
@@ -49,7 +49,7 @@
                     <div>
                         <p:outputLabel for="permission" value="#{msgs.berechtigung}"/>
                         <p:selectOneMenu id="permission"
-                                         value="#{BenutzergruppenForm.myBenutzergruppe.permissionAsString}"
+                                         value="#{BenutzergruppenForm.myBenutzergruppe.authorizations}"
                                          required="true">
                             <f:selectItem itemValue="1" itemLabel="#{msgs.administration}"/>
                             <f:selectItem itemValue="2" itemLabel="#{msgs.prozessverwaltung}"/>
