--- a/Kitodo/src/main/webapp/pages/newTaskManager.xhtml
+++ b/Kitodo/src/main/webapp/pages/newTaskManager.xhtml
@@ -79,4 +79,8 @@
             </p:panel>
         </p:panel>
     </ui:define>
+    <ui:define name="breadcrumbs">
+        <li><a href="">#{msgs.taskmanager}</a></li>
+        <li><h:link value="#{msgs.startseite}" outcome="start"/></li>
+    </ui:define>
 </ui:composition>
