--- a/Kitodo/src/main/webapp/pages/tasks.xhtml
+++ b/Kitodo/src/main/webapp/pages/tasks.xhtml
@@ -13,7 +13,6 @@
 
 <ui:composition
         template="/WEB-INF/templates/base.xhtml"
-        xmlns:f="http://xmlns.jcp.org/jsf/core"
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:p="http://primefaces.org/ui">
@@ -51,5 +50,9 @@
                 </p:panel>
             </h:form>
         </p:panel>
+    </ui:define>
+    <ui:define name="breadcrumbs">
+        <li><a href="">#{msgs.schritte}</a></li>
+        <li><h:link value="#{msgs.startseite}" outcome="start"/></li>
     </ui:define>
 </ui:composition>
