--- a/Kitodo/src/main/webapp/pages/users.xhtml
+++ b/Kitodo/src/main/webapp/pages/users.xhtml
@@ -39,4 +39,8 @@
             </p:tabView>
         </p:panel>
     </ui:define>
+    <ui:define name="breadcrumbs">
+        <li><a href="">#{msgs.users}</a></li>
+        <li><h:link value="#{msgs.startseite}" outcome="start"/></li>
+    </ui:define>
 </ui:composition>
