--- a/Kitodo/src/main/webapp/pages/userInstructions.xhtml
+++ b/Kitodo/src/main/webapp/pages/userInstructions.xhtml
@@ -1,25 +1,33 @@
+<!--
+ *
+ * (c) Kitodo. Key to digital objects e. V. <contact@kitodo.org>
+ *
+ * This file is part of the Kitodo project.
+ *
+ * It is licensed under GNU General Public License version 3 or later.
+ *
+ * For the full copyright and license information, please read the
+ * GPL3-License.txt file that was distributed with this source code.
+ *
+-->
+
 <ui:composition
-        template="/WEB-INF/templates/base.xhtml"
         xmlns:f="http://xmlns.jcp.org/jsf/core"
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-        xmlns:p="http://primefaces.org/ui">
+        xmlns:p="http://primefaces.org/ui"
+        template="/WEB-INF/templates/base.xhtml">
     <ui:define name="content">
         <p:panel id="listWrapper">
-
-                <p:panel styleClass="content-header">
-                    <h3>
-                        #{msgs.bedienungshinweise}
-                    </h3>
-                </p:panel>
-
-                <p:panel styleClass="text-align: justify;">
-                    <h:outputText  styleClass="text-align: justify;"
-                                  value="#{msgs.bedienungshinweiseText}" escape="false"/>
-                </p:panel>
-
-
-
+            <p:panel styleClass="content-header">
+                <h3>
+                    #{msgs.bedienungshinweise}
+                </h3>
+            </p:panel>
+            <p:panel styleClass="text-align: justify;">
+                <h:outputText styleClass="text-align: justify;"
+                              value="#{msgs.bedienungshinweiseText}" escape="false"/>
+            </p:panel>
         </p:panel>
     </ui:define>
 </ui:composition>
