--- a/Kitodo/src/main/webapp/pages/usergroupEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/usergroupEdit.xhtml
@@ -37,7 +37,9 @@
                                      iconPos="right"
                                      styleClass="button-filled-blue"/>
                 </p:panel>
+
                 <!-- main form -->
+                <p:messages id="usergroupedit-messages" autoUpdate="true" />
                 <p:panelGrid columns="2">
                     <p:outputLabel for="title" value="#{msgs.titel}"/>
                     <p:inputText id="title"
@@ -47,7 +49,7 @@
                     <p:outputLabel for="authorizations" value="#{msgs.berechtigungen}"/>
                     <p:pickList id="authorizations"
                                 value="#{BenutzergruppenForm.authorizations}"
-                                var="authorization" itemLabel="#{authorization}" itemValue="#{authorization}">
+                                var="authorization" itemLabel="#{authorization.title}" itemValue="#{authorization.id}">
                         <f:facet name="sourceCaption" style="color: #000;">#{msgs.available}</f:facet>
                         <f:facet name="targetCaption" style="color: #000;">#{msgs.assigned}</f:facet>
                     </p:pickList>
